--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
